fix: cake image container overflow hidden

--- a/assets/css/front_wedding_blocks.css
+++ b/assets/css/front_wedding_blocks.css
@@ -198,6 +198,7 @@
 .cake-image-container {
     position: relative;
     display: inline-block;
+    overflow: hidden;
     width: 100%;
     height: 100%;
 }
